<resources>
    <string name="app_namee">Bookswagon</string>
    <string name="app_name">Bookswagon</string>
    <string name="add_barcode">Inventory Scan</string>
    <string name="search_barcode">Search</string>
    <string name="inward">Inward Scanning</string>
    <string name="stockout">Sale</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="enterBookShelfNumber">Enter Rack Number: </string>
    <string name="sucessfullyScanned">Scanned Successfully.</string>
    <string name="isbnn">ISBN: </string>
    <string name="qty">Quantity: </string>
    <string name="add">ADD MORE</string>
    <string name="shelfnum">Rack: </string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="barcodescanner">Catalogue Scanner/Sieve</string>
    <string name="welcome">Welcome,</string>
    <string name="copyright">©  Copyright 2018 SR Ecommerce</string>
    <string name="allrightsreserved">All Rights Reserved</string>
    <string name="version">Version 2.3</string>
    <string name="sieve_version">Version 2.3</string>
    <string name="shelf">Rack: </string>
    <string name="isbn">ISBN: </string>
    <string name="qtyy">Qty:</string>
    <string name="ordrqty">Ordered Qty:</string>
    <string name="actqty">Scanned Qty:</string>
    <string name="status">Status:</string>
    <string name="isbnnumber">ISBN Number</string>
    <string name="wracknumber">Rack Number</string>
    <string name="ip">IP Address</string>
    <string name="empId">Employee ID</string>
    <string name="enterotp">Enter OTP</string>
    <string name="finish">Finish</string>
    <string name="showlist">Show my List</string>
    <string name="discard">Discard</string>
    <string name="remove">Remove</string>
    <string name="connecting">Connecting…</string>
    <string name="search">Search</string>
    <string name="invoiceno">Invoice No:</string>
    <string name="invoicen">Invoice here (eg. 0123,01234…)</string>
    <string name="showresult">Show my Result</string>
    <string name="showmismatchedisbnlist">Show Mismatched ISBN</string>
    <string name="missingqty">Shortage Qty:</string>
    <string name="rescan">Re Scan</string>
    <string name="manual_search">Manual Search</string>
    <string name="scanner_search">Search by Scanner</string>
    <string name="rack">Rack: </string>
    <string name="tqty">Current Qty: </string>
    <string name="invoicecomma">Comma Separated Values:</string>
    <string name="vendor">Vendor: </string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tab_layout_screeen">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tscanner">Tracking ID Scanner</string>
    <string name="count">Scanned Count: </string>
    <string name="startcounter">Start Counter</string>
    <string name="stopcounter">Stop Counter</string>
    <string name="removeTrackingId">Remove Tracking ID</string>
    <string name="newtrackingid">Scan Tracking ID</string>
    <string name="scantrackingid">Insert Tracking ID</string>
    <string name="scannedsucess">Tracking ID Found</string>
    <string name="trackingid">Tracking Id:</string>
    <string name="checktrackingid">Check Tracking Id</string>
    <string name="tracking">Tracking ID</string>
    <string name="alert">Alert !!!</string>
    <string name="choosefile">Choose a CSV File to Upload:</string>
    <string name="selectile">Select a file</string>
    <string name="export">Save Result</string>
    <string name="savemismatched">Save</string>
    <string name="update">Update Invoice</string>
    <string name="address">Update Address</string>
    <string name="oldaddr">OLD Address: </string>
    <string name="newaddr">NEW Address: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
