<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".BWG_Sieve_HomeScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/userContainer"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="13dp"
            android:gravity="end|center_vertical"
            android:layout_alignParentTop="true"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/welcome_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/welcome"
                android:textColor="@color/black"
                style="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/logedempid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                style="@style/TextAppearance.AppCompat.Medium"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cont"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginEnd="10dp"
            android:gravity="end|center|center_vertical"
            android:layout_below="@id/userContainer"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/pbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"/>

            <ImageView
                android:id="@+id/checkscimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/cont"
            android:gravity="center_horizontal|center">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/firstContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_below="@id/container"
            android:gravity="center|center_horizontal">

            <ToggleButton
                android:id="@+id/togglebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                style="@style/TextAppearance.AppCompat.Medium"
                android:background="@drawable/custom_toggle_off"
                android:textOff="@string/startcounter"
                android:textOn="@string/stopcounter"/>

            <Button
                android:id="@+id/newTrackingId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_layout"
                android:text="@string/newtrackingid"
                android:textColor="@color/white"
                android:layout_marginTop="40dp"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginBottom="35dp"/>

            <Button
                android:id="@+id/cancelledTrackingId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_layout"
                android:text="@string/scantrackingid"
                style="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:layout_marginBottom="35dp"/>

            <Button
                android:id="@+id/removeTrackingId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Medium"
                android:background="@drawable/custom_button_layout"
                android:text="@string/removeTrackingId"
                android:textColor="@color/white"
                android:layout_marginBottom="35dp"/>

            <Button
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Medium"
                android:background="@drawable/custom_button_layout"
                android:text="@string/address"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/secondContainer"
            android:layout_below="@id/firstContainer"
            android:orientation="vertical"
            android:layout_marginBottom="5dp"
            android:layout_alignParentBottom="true"
            android:gravity="bottom|center_horizontal">

            <TextView
                android:id="@+id/version_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/sieve_version"
                android:textSize="15sp"
                android:gravity="bottom" />
            <TextView
                android:id="@+id/copyright_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/copyright"
                android:gravity="bottom"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/allrightsreserved_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/allrightsreserved"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>