<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".Inward_Scanning">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:id="@+id/container"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/invoicecomma"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstContainer"
        android:layout_below="@id/container"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrapperinvoice"
            android:layout_width="match_parent"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/invoicen"
                style="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/invoiceinput"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:layout_below="@id/firstContainer"
        android:id="@+id/invoicebtnsubmit"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="@drawable/custom_button_layout"
        android:textColor="@color/white" />

</RelativeLayout>