<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="4dp"
        card_view:cardMaxElevation="1dp"
        android:background="@color/white"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardPreventCornerOverlap="false">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/firstContainer"
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentStart="true"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginStart="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/isbn"
                        android:textStyle="bold"
                        style="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/isbn_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        style="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/secondContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/firstContainer"
                    android:orientation="vertical"
                    android:layout_marginStart="5dp"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ordrqty"
                        android:textStyle="bold"
                        style="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/orderqty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        style="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/thirdContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/secondContainer"
                    android:orientation="vertical"
                    android:layout_marginStart="5dp"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actqty"
                        android:textStyle="bold"
                        style="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/actualqty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        style="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/thirdContainer"
                    android:orientation="vertical"
                    android:layout_marginStart="5dp"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textStyle="bold"
                        style="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        style="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>

            </RelativeLayout>
        </HorizontalScrollView>
    </android.support.v7.widget.CardView>
</RelativeLayout>