<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".Add_More">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <!--<LinearLayout
        android:id="@+id/container_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingEnd="16dp"
        android:paddingStart="0dp"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/welcome_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logedempid"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"/>
    </LinearLayout>-->

    <LinearLayout
        android:id="@+id/container_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="0dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sucess"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sucessfullyScanned"
                style="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="0dp">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shelfnum"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/shelftextview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_marginStart="10dp" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/isbnn"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/isbntextview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/isbnn"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_marginStart="10dp" />
                </TableRow>

            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finish"
                android:textColor="@color/white"
                android:background="@drawable/custom_button_layout"
                style="@style/TextAppearance.AppCompat.Medium" />

        </LinearLayout>
        
    </LinearLayout>

       <!-- <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical"
            android:layout_below="@+id/container_second">

            <TextView
                android:id="@+id/version_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/version"
                android:textSize="15sp"
                android:gravity="bottom" />

            <TextView
                android:id="@+id/copyright_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/copyright"
                android:gravity="bottom" />

            <TextView
                android:id="@+id/allrightsreserved_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/allrightsreserved" />
        </LinearLayout> -->
    </RelativeLayout>
</ScrollView>